Changed to rock, paper, scissors, lizard, spoc classifier

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <body>
   <nav class="navbar navbar-dark bg-dark">
     <div class="container">
-      <p class="navbar-brand">Finger Counter</a>
+      <p class="navbar-brand">Rock, Paper, Sissors, Lizard, Spoc Classifier</a>
     </div>
   </nav>
 
   <div class='container'>
     <div class="row">
-      <h1>Let me learn to count your fingers!</h1>
-      <p> Teach me by showing me your and with some fingers extended and tell me how many fingers you are extending. So I can learn.</p>
+      <h1>Teach me to play Rock, Paper, Scissors, Lizard, Spoc!</h1>
+      <p>Teach me by showing me your hand guestures for the game <em>Rock, Paper, Scissors, Lizard, Spoc</em> and tell me which it is. The more you show me the better I learn.</p>
     </div>
   </div>
   <div class='container'>
@@ -45,12 +45,12 @@
       </div>
       <div class="col-2">
         <div class="btn-group-vertical mt-1" role="group" aria-label="Classification buttons">
-          <button class='btn btn-primary ' id="class-0">No fingers</button>
-          <button class='btn btn-primary ' id="class-1">1 Finger</button>
-          <button class='btn btn-primary ' id="class-2">2 Fingers</button>
-          <button class='btn btn-primary ' id="class-3">3 Fingers</button>
-          <button class='btn btn-primary ' id="class-4">4 Fingers</button>
-          <button class='btn btn-primary ' id="class-5">5 Fingers</button>
+          <button class='btn btn-primary ' id="class-0">No guesture</button>
+          <button class='btn btn-primary ' id="class-1">Rock Gesture</button>
+          <button class='btn btn-primary ' id="class-2">Paper Gesture</button>
+          <button class='btn btn-primary ' id="class-3">Scissors Gesture</button>
+          <button class='btn btn-primary ' id="class-4">Lizard Gesture</button>
+          <button class='btn btn-primary ' id="class-5">Spoc Gesture</button>
         </div>
       </div>
       <div class="col-4">
